feat:upgrading fastify to v3 and adding endpoint to test jwt
