# static/openapi.json
@@ -97,6 +97,107 @@
           "common"
         ]
       }
+    },
+    "/base/v1/jwt": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "description": "Decode user",
+                  "type": "object",
+                  "properties": {
+                    "iat": {
+                      "type": "number"
+                    },
+                    "exp": {
+                      "type": "number"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "accountId": {
+                          "type": "number"
+                        },
+                        "deviceToken": {
+                          "type": "string"
+                        },
+                        "deviceInfo": {
+                          "type": "object",
+                          "properties": {
+                            "deviceName": {
+                              "type": "string"
+                            },
+                            "type": {
+                              "type": "string"
+                            },
+                            "deviceModel": {
+                              "type": "string"
+                            },
+                            "deviceBrand": {
+                              "type": "string"
+                            },
+                            "firmwareVersion": {
+                              "type": "string"
+                            },
+                            "deviceOsVersion": {
+                              "type": "string"
+                            },
+                            "ipAddress": {
+                              "type": "string"
+                            },
+                            "casId": {
+                              "type": "string"
+                            },
+                            "uuid": {
+                              "type": "string"
+                            },
+                            "mac": {
+                              "type": "string"
+                            },
+                            "appVersion": {
+                              "type": "string"
+                            },
+                            "deviceType": {
+                              "type": "string"
+                            },
+                            "networkType": {
+                              "type": "string"
+                            },
+                            "deviceOs": {
+                              "type": "string"
+                            },
+                            "playerType": {
+                              "type": "string"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "description": "Decode user"
+          }
+        },
+        "summary": "Decoded user",
+        "description": "Decoded user",
+        "tags": [
+          "common"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
     }
   }
 }
